--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.441.0",
     "multer": "1.4.5-lts.1",
-    "next": "14.2.11",
+    "next": "^15.4.1",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
